# SDLE

./: .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  SDLE.cpp
config/windows/: app.rc
include/SDLE/: Assets.h  RmlUI.h  SDLE.h
include/SDLE/UI/: Label.h  UI.h
source/: SDLE.cpp  SDLE.h
source/SDLE/: Assets.cpp  RmlUI.cpp  SDLE.cpp
source/SDLE/Backends/: RmlUi_Platform_SDL.h  RmlUi_Renderer_SDL.h
source/SDLE/UI/: Label.cpp  UI.cpp
